--- a/index.html
+++ b/index.html
@@ -8,70 +8,147 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Kazak-gruzovik</title>
+    <title>Грузоперевозки по Москве и области. Русские водители и грузчики.</title>
   </head>
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Garynya/kazak-gruzovik">View on GitHub</a>
+  <div id="wrapper">
+<div id="content">
+<img src="gruzoperevoz.jpg" width=1003 height=163>
+            
+<div id="main">
+<br>
+<p align="center"><strong><font color="red">ГРУЗОПЕРЕВОЗКИ БЫСТРО И НЕДОРОГО! &nbsp;&nbsp;&nbsp;ВОДИТЕЛИ И ГРУЗЧИКИ - РУССКИЕ!</font></strong></p>
+<p align="left">Компания &quot;Грузоперевоз&quot; поможет Вам при <strong>переезде офиса, квартирном или дачном переездах, дальних выездах. 
+Грузоперевоз осуществляется по Москве и  области, а также  по России. Опыт работы - более 10 лет.</strong></p>
 
-          <h1 id="project_title">Kazak-gruzovik</h1>
-          <h2 id="project_tagline"></h2>
+<p align="left">Компания &quot;Грузоперевоз&quot; это:
+<strong>
+  <br>- автомобили грузоподъемностью от 1 до 20 тонн
+  <br>- вежливые и опытные <font color="red">русские водители и грузчики</font>
+  <br>- разборка, упаковка, сборка и расстановка мебели
+  <br>- вывоз и утилизация строительного мусора и ненужных вещей
+  <br>- возможность срочных заказов
+  <br>- скидки для льготных категорий граждан
+</strong>
+</p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Garynya/kazak-gruzovik/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Garynya/kazak-gruzovik/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+<p align="center"><strong><font color="red">Наше призвание - ПРИНОСИТЬ и ПРИВОЗИТЬ людям СЧАСТЬЕ!</font></strong></p>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<center>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<TABLE width=100% cellspacing=1 cellpadding=1 border=1>
+<TR>
+<TD ALIGN="center" CLASS="textCopy"><div align="center"><strong>Тип транспорта</strong></div></TD>
+<TD ALIGN="center" CLASS="textCopy"><div align="center"><strong>Цена в час</strong></div></TD>
+<TD ALIGN="center" CLASS="textCopy"><div align="center"><strong>Цена в час с пропуском в центр</strong></div></TD>
+<TD ALIGN="center" CLASS="textCopy"><div align="center"><strong>Цена за МКАД</strong></div></TD>
+<TD ALIGN="center" CLASS="textCopy"><div align="center"><strong>Минимальный заказ</strong></div></TD>
+</TR>
+<TR>
+<TD ALIGN="center" CLASS="textCopy"><div align="left"><strong>&nbspГазель - Тент 1,5 т</strong></div></TD>
+<TD CLASS="textCopy" ALIGN="center">350 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">350 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">12 руб./км</TD>
+<TD CLASS="textCopy" ALIGN="center">(4+1) 1750 руб.</TD>
+</TR>
+<TR>
+<TD ALIGN="center" CLASS="textCopy"><div align="left"><strong>&nbspГазель удлиненная до 4,2 м</strong></div></TD>
+<TD CLASS="textCopy" ALIGN="center">450 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">450 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">14 руб./км</TD>
+<TD CLASS="textCopy" ALIGN="center">(5+1) 2700 руб.</TD>
+</TR>
+<TR>
+<TD ALIGN="center" CLASS="textCopy"><div align="left"><strong>&nbspПежо цельнометаллический 3,5 м, 13 куб.м</strong></div></TD>
+<TD CLASS="textCopy" ALIGN="center">350 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">350 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">12 руб./км</TD>
+<TD CLASS="textCopy" ALIGN="center">(5+1) 2100 руб.</TD>
+</TR>
+<TR>
+<TD ALIGN="center" CLASS="textCopy"><div align="left"><strong>&nbspГазель высокая (2-2,15 м) до 1,5 т</strong></div></TD>
+<TD CLASS="textCopy" ALIGN="center">450 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">450 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">14 руб./км</TD>
+<TD CLASS="textCopy" ALIGN="center">(4+1) 2250 руб.</TD>
+</TR>
+<TR>
+<TD ALIGN="center" CLASS="textCopy"><div align="left"><strong>&nbspЗИЛ-Бычок до 3 т (от 16 до 19 куб.м)</strong></div></TD>
+<TD CLASS="textCopy" ALIGN="center">450 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">500 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">15 руб./км</TD>
+<TD CLASS="textCopy" ALIGN="center">(5+1) 2700 руб.</TD>
+</TR>
+<TR>
+<TD ALIGN="center" CLASS="textCopy"><div align="left"><strong>&nbspЗИЛ-Бычок до 3 т (от 20 до 24 куб.м)</strong></div></TD>
+<TD CLASS="textCopy" ALIGN="center">450 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">500 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">15 руб./км</TD>
+<TD CLASS="textCopy" ALIGN="center">(5+1) 2700 руб.</TD>
+</TR>
+<TR>
+<TD ALIGN="center" CLASS="textCopy"><div align="left"><strong>&nbspЗИЛ, ГАЗ до 5 тонн</strong></div></TD>
+<TD CLASS="textCopy" ALIGN="center">500 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">550 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">15 руб./км</TD>
+<TD CLASS="textCopy" ALIGN="center">(6+1) 3500 руб.</TD>
+</TR>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<TR>
+<TD ALIGN="center" CLASS="textCopy"><div align="left"><strong>&nbspФура (от 82 до 84 куб.м) до 20 тонн</strong></div></TD>
+<TD CLASS="textCopy" ALIGN="center">700 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">750 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">28 руб./км</TD>
+<TD CLASS="textCopy" ALIGN="center">(7+1) 5600 руб.</TD>
+</TR>
+<TR>
+<TD ALIGN="center" CLASS="textCopy"><div align="left"><strong>&nbspФура (от 90 до 100 куб.м) до 20 тонн</strong></div></TD>
+<TD CLASS="textCopy" ALIGN="center">750 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">800 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">28 руб./км</TD>
+<TD CLASS="textCopy" ALIGN="center">(7+1) 6000 руб.</TD>
+</TR>
+<TR>
+<TD ALIGN="center" CLASS="textCopy"><div align="left"><strong>&nbspАренда грузчиков</strong></div></TD>
+<TD CLASS="textCopy" ALIGN="center">300 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center"></TD>
+<TD CLASS="textCopy" ALIGN="center"></TD>
+<TD CLASS="textCopy" ALIGN="center"></TD>
+</TR>
+</TABLE>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<br>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>  
+<SPAN CLASS="textCopy">
+  <B>Телефоны:</B> +7 499 202-85-<span style="display:none;">_</span>50, +7 916 019-25-<span style="display:none;">_</span>01 с 7 до 23 без выходных
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <B>E-mail:</B> <A HREF="mailto:kazak_pesnia@mail.ru">kazak_pesnia@mail.ru</A>
+</SPAN>
+</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p align="center"><strong><font color="red">Требуются расклейщики объявлений!</font></strong></p>
+</p>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<br>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<table width="100%">
+<tr>
+<td align="right" style="font-size: 11px;">
+<a href="http://www.centro.ru" target="_blank">Центронет: </a>
+<a href="http://www.centro-reclama.ru/minisite.htm" target="_blank">cайты бесплатно, </a>
+<a href="http://www.centro-reclama.ru/" target="_blank">Интернет реклама</a>
+</td>
+</tr>
+</table>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+</div>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+</div>
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Kazak-gruzovik maintained by <a href="https://github.com/Garynya">Garynya</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+</div>
 
     
 
