--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Kazak-gruzovik : " />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/site.css">
 
     <title>Грузоперевозки по Москве и области. Русские водители и грузчики.</title>
   </head>
@@ -15,7 +15,7 @@
 
   <div id="wrapper">
 <div id="content">
-<img src="gruzoperevoz.jpg" width=1003 height=163>
+<img src="images/gruzoperevoz.jpg" width=1003 height=163>
             
 <div id="main">
 <br>
