--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Kazak-gruzovik : " />
+	
+	<meta name='yandex-verification' content='46c47e08c0325c51' />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/site.css">
 
