--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 <p>  
 <SPAN CLASS="textCopy">
-  <B>Телефоны:</B> +7 499 202-85-<span style="display:none;">_</span>50, +7 916 019-25-<span style="display:none;">_</span>01 с 7 до 23 без выходных
+  <B>Телефоны:</B> +7 499 202-85-<span style="display:none;">_</span>50, +7 916 019-25-<span style="display:none;">_</span>01 груглосуточно без выходных
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <B>E-mail:</B> <A HREF="mailto:kazak_pesnia@mail.ru">kazak_pesnia@mail.ru</A>
 </SPAN>
