--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
   <body>
 
-  <!-- Yandex.Metrika counter -->
+<!-- Yandex.Metrika counter -->
 <script type="text/javascript">
 (function (d, w, c) {
     (w[c] = w[c] || []).push(function() {
         try {
-            w.yaCounter24765542 = new Ya.Metrika({id:24765542,
+            w.yaCounter24938384 = new Ya.Metrika({id:24938384,
                     clickmap:true,
                     trackLinks:true,
                     accurateTrackBounce:true});
@@ -39,7 +39,7 @@
     } else { f(); }
 })(document, window, "yandex_metrika_callbacks");
 </script>
-<noscript><div><img src="//mc.yandex.ru/watch/24765542" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<noscript><div><img src="//mc.yandex.ru/watch/24938384" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
   
   <div id="wrapper">
@@ -141,13 +141,12 @@
 
 <p>  
 <SPAN CLASS="textCopy">
-  <B>Телефоны:</B> +7 499 202-85-<span style="display:none;">_</span>50, +7 916 019-25-<span style="display:none;">_</span>01 груглосуточно без выходных
+  <B>Телефоны:</B> +7 499 202-85-<span style="display:none;">_</span>50, +7 916 019-25-<span style="display:none;">_</span>01 круглосуточно без выходных
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <B>E-mail:</B> <A HREF="mailto:kazak_pesnia@mail.ru">kazak_pesnia@mail.ru</A>
 </SPAN>
 </p>
 
-<p align="center"><strong><font color="red">Требуются расклейщики объявлений!</font></strong></p>
 </p>
 
 <br>
