--- a/about.html
+++ b/about.html
@@ -5,8 +5,6 @@
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Kazak-gruzovik : " />
-	
-	<meta name='yandex-verification' content='46c47e08c0325c51' />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/site.css">
 
@@ -71,7 +69,7 @@
             Организация также работает и с юридическими лицами, а именно без предоплаты (например, по предварительному письменному договору). Оплата может осуществляться как  наличным,   так и безналичным расчётом.   Учитывая опыт предыдущих лет  фирма «Грузоперевоз» акцентирует внимание заказчика на ценовую политику и гибкий подход к решению поставленных задач.   
 
 <br>
-
+  <h4> <a href="kazak-gruzovik.ru">О компании</a></h4>
 <p>  
 <SPAN CLASS="textCopy">
   <B>Телефоны:</B> +7 499 202-85-<span style="display:none;">_</span>50, +7 916 019-25-<span style="display:none;">_</span>01 круглосуточно без выходных
