--- a/about.html
+++ b/about.html
@@ -41,6 +41,8 @@
 <!-- /Yandex.Metrika counter -->
   
   <div id="wrapper">
+  <h4> <a href="kazak-gruzovik.ru">Казак-грузовик</a></h4>
+
 <div id="content">
 <img src="images/gruzoperevoz.jpg" width=1003 height=163>
             
@@ -69,7 +71,7 @@
             Организация также работает и с юридическими лицами, а именно без предоплаты (например, по предварительному письменному договору). Оплата может осуществляться как  наличным,   так и безналичным расчётом.   Учитывая опыт предыдущих лет  фирма «Грузоперевоз» акцентирует внимание заказчика на ценовую политику и гибкий подход к решению поставленных задач.   
 
 <br>
-  <h4> <a href="kazak-gruzovik.ru">О компании</a></h4>
+   
 <p>  
 <SPAN CLASS="textCopy">
   <B>Телефоны:</B> +7 499 202-85-<span style="display:none;">_</span>50, +7 916 019-25-<span style="display:none;">_</span>01 круглосуточно без выходных
