--- a/about.html
+++ b/about.html
@@ -41,9 +41,8 @@
 <!-- /Yandex.Metrika counter -->
   
   <div id="wrapper">
-  <h4> <a href="kazak-gruzovik.ru">Казак-грузовик</a></h4>
-
 <div id="content">
+  <h4> <a href="www.kazak-gruzovik.ru">Казак-грузовик</a></h4>
 <img src="images/gruzoperevoz.jpg" width=1003 height=163>
             
 <div id="main">
