--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
   
   <div id="wrapper">
 <div id="content">
-  <h4> <a href="www.kazak-gruzovik.ru">Казак-грузовик</a></h4>
+  <h4> <a href="http://www.kazak-gruzovik.ru">Казак-грузовик</a></h4>
 <img src="images/gruzoperevoz.jpg" width=1003 height=163>
             
 <div id="main">
