--- a/index.html
+++ b/index.html
@@ -138,7 +138,18 @@
 </TABLE>
 
 <br>
-
+<div align = "center">
+ <h2> <a href="about.html">О компании</a></h3>
+ <h2> <a href="about.html#predvaritel">Предварительная загрузка</a></h3>
+ <h2> <a href="about.html#pack">Упаковка</a></h3>
+ <h2> <a href="about.html#down-up">Спуск-подъем</a></h3>
+ <h2> <a href="about.html#utilize">Вывоз мусора</a></h3>
+ <h2> <a href="about.html#cumbersome">Неудобные вещи</a></h3>
+ <h2> <a href="about.html#under-water">Подводные камни</a></h3>
+ <h2> <a href="about.html#long-distance">Дальние расстояния</a></h3>
+ <h2> <a href="about.html#warning">Предостережения</a></h3>
+</div> 
+<br>
 <p>  
 <SPAN CLASS="textCopy">
   <B>Телефоны:</B> +7 499 202-85-<span style="display:none;">_</span>50, +7 916 019-25-<span style="display:none;">_</span>01 круглосуточно без выходных
@@ -149,7 +160,6 @@
 
 </p>
 
-  <h4> <a href="about.html">О компании</a></h4>
 
 </div>
 
