--- a/index.html
+++ b/index.html
@@ -139,15 +139,17 @@
 
 <br>
 <div align = "center">
- <h2> <a href="about.html">О компании</a></h3>
- <h2> <a href="about.html#predvaritel">Предварительная загрузка</a></h3>
- <h2> <a href="about.html#pack">Упаковка</a></h3>
- <h2> <a href="about.html#down-up">Спуск-подъем</a></h3>
- <h2> <a href="about.html#utilize">Вывоз мусора</a></h3>
- <h2> <a href="about.html#cumbersome">Неудобные вещи</a></h3>
- <h2> <a href="about.html#under-water">Подводные камни</a></h3>
- <h2> <a href="about.html#long-distance">Дальние расстояния</a></h3>
- <h2> <a href="about.html#warning">Предостережения</a></h3>
+ <h2> 
+ <a href="about.html">О компании</a> 
+ <a href="about.html#predvaritel">Предварительная загрузка</a>
+ <a href="about.html#pack">Упаковка</a>
+ <a href="about.html#down-up">Спуск-подъем</a>
+ <a href="about.html#utilize">Вывоз мусора</a>
+ <a href="about.html#cumbersome">Неудобные вещи</a>
+ <a href="about.html#under-water">Подводные камни</a>
+ <a href="about.html#long-distance">Дальние расстояния</a>
+ <a href="about.html#warning">Предостережения</a>
+ </h2>
 </div> 
 <br>
 <p>  
