--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
 <TD CLASS="textCopy" ALIGN="center">(5+1) 2100 руб.</TD>
 </TR>
 <TR>
+<TD ALIGN="center" CLASS="textCopy"><div align="left"><strong>&nbspПежо цельнометаллический 4,0 м, 15 куб.м</strong></div></TD>
+<TD CLASS="textCopy" ALIGN="center">450 руб.</TD>
+<TD CLASS="textCopy" ALIGN="center">14 руб./км</TD>
+<TD CLASS="textCopy" ALIGN="center">(5+1) 2700 руб.</TD>
+</TR>
+<TR>
 <TD ALIGN="center" CLASS="textCopy"><div align="left"><strong>&nbspГазель высокая (2-2,15 м) до 1,5 т</strong></div></TD>
 <TD CLASS="textCopy" ALIGN="center">450 руб.</TD>
 <TD CLASS="textCopy" ALIGN="center">14 руб./км</TD>
