--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Kazak-gruzovik : " />
-	
+    <meta name="description" content="Kazak-gruzovik : " />	
 	<meta name='yandex-verification' content='46c47e08c0325c51' />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/site.css">
 
-    <title>Грузоперевозки по Москве и области. Русские водители и грузчики.</title>
+    <title>Грузоперевозки по Москве и области.</title>
   </head>
 
   <body>
@@ -155,6 +154,9 @@
  <a href="about.html#under-water">Подводные камни</a>
  <a href="about.html#long-distance">Дальние расстояния</a>
  <a href="about.html#warning">Предостережения</a>
+ <a href="cases.html">Случаи из практики</a> 
+ <a href="fridges.html">Перевозка холодильников</a> 
+ <a href="cars.html">Наши автомобили</a> 
  </h2>
 </div> 
 <br>
