--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/site.css"> 
 
-    <title>Грузоперевозки по Москве и области. Русские водители и грузчики.</title>
+    <title>Грузоперевозки по Москве и области.</title>
   </head>
 
   <body>
@@ -39,6 +39,17 @@
 </script>
 <noscript><div><img src="//mc.yandex.ru/watch/24938384" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-51955025-1', 'kazak-gruzovik.ru');
+  ga('send', 'pageview');
+
+</script>
   
   <div id="wrapper">
 <div id="content">
